# stm32_cubemx_dc_motor

./: .mxproject  stm32_cubemx_dc_motor.ioc
Core/Src/: gpio.c  main.c  tim.c  usart.c
Drivers/CMSIS/: LICENSE.txt
Drivers/CMSIS/DSP/DSP_Lib_TestSuite/DspLibTest_FVP_A5/RTE/CMSIS/: RTX_Config.c
Drivers/CMSIS/Device/ST/STM32L4xx/Include/: stm32l412xx.h  stm32l422xx.h  stm32l431xx.h  stm32l432xx.h  stm32l433xx.h  stm32l442xx.h  stm32l443xx.h  stm32l451xx.h  stm32l452xx.h  stm32l462xx.h  stm32l471xx.h  stm32l475xx.h  stm32l476xx.h  stm32l485xx.h  stm32l486xx.h  stm32l496xx.h  stm32l4a6xx.h  stm32l4p5xx.h  stm32l4q5xx.h  stm32l4r5xx.h  stm32l4r7xx.h  stm32l4r9xx.h  stm32l4s5xx.h  stm32l4s7xx.h  stm32l4s9xx.h
Drivers/STM32L4xx_HAL_Driver/Inc/: stm32l4xx_hal_dfsdm.h  stm32l4xx_hal_dma.h  stm32l4xx_ll_dma.h  stm32l4xx_ll_dmamux.h
Drivers/STM32L4xx_HAL_Driver/Src/: stm32l4xx_hal_dfsdm.c  stm32l4xx_hal_hash.c  stm32l4xx_ll_dma.c
app/: CMakeLists.txt
app/dc_motor/: CMakeLists.txt  dc_motor.c  dc_motor.h  dc_motor_config.h
app/l298n/: CMakeLists.txt  l298n.c  l298n.h  l298n_channel.c  l298n_channel.h  l298n_config.h
app/main/: CMakeLists.txt  main.c
